Improve the display of remaining time

https://bugzilla.gnome.org/show_bug.cgi?id=720941